--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
