--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@heroicons/react": "^2.1.5",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.18.0",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@react-email/components": "0.0.22",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
