--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
@@ -43,6 +45,7 @@
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
     "input-otp": "^1.2.4",
+    "jotai": "^2.9.3",
     "lucide-react": "^0.424.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -57,6 +60,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
+    "react-resizable-panels": "^2.1.0",
     "react-text-transition": "^3.1.0",
     "resend": "3.5.0",
     "tailwind-merge": "^2.4.0",
