--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
     "input-otp": "^1.2.4",
@@ -53,6 +54,7 @@
     "next-themes": "^0.3.0",
     "prisma": "^5.18.0",
     "react": "^18",
+    "react-country-state-city": "^1.1.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
