--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "country-state-city": "^3.2.1",
     "date-fns": "^3.6.0",
     "flowbite-react": "^0.10.1",
+    "html-react-parser": "^5.1.15",
     "input-otp": "^1.2.4",
     "jotai": "^2.9.3",
     "lucide-react": "^0.424.0",
@@ -64,7 +65,9 @@
     "react-icons": "^5.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-multi-select-component": "^4.3.4",
+    "react-quill": "^2.0.0",
     "react-resizable-panels": "^2.1.0",
+    "react-tailwindcss-select": "^1.8.5",
     "react-text-transition": "^3.1.0",
     "resend": "3.5.0",
     "tailwind-merge": "^2.4.0",
@@ -74,6 +77,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
